security/deployment-db-np.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    tier: backend
  name: redis-db
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
        type: db-cache
    spec:
      containers:
      - image: redis
        name: redis
