security/security-context-pod.yaml
apiVersion: v1
kind: Pod
metadata:
   name: tiny-linux 

spec:
  containers:
  - name: ubuntu
    image: ubuntu
    securityContext:
       runAsUser: 1000
       capabilities:
           add: ["MAC_ADMIN","NET_ADMIN"]
